--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voicevox",
-  "version": "0.8.2",
+  "version": "0.8.2-y-7",
   "author": "Hiroshiba Kazuyuki",
   "private": true,
   "engines": {
